ajax로 권한 토큰 발급까지